--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Flask==2.1.0
 transformers==4.30.0
-torch==1.12.0+cpu
-torchvision==0.13.0+cpu
-torchaudio==0.12.0+cpu
--f https://download.pytorch.org/whl/cpu/torch_stable.html
+torch==2.4.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.4.1+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 nltk==3.7
 google-generativeai==0.3.0
 gunicorn==20.1.0
