--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Flask==2.1.0
-transformers==4.30.0
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.4.1+cpu
 torchvision==0.19.1+cpu
 torchaudio==2.4.1+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
 nltk==3.7
 google-generativeai==0.3.0
 gunicorn==20.1.0
+transformers==4.30.0
+tokenizers==0.13.3
