--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,4 @@ torchaudio==2.4.1+cpu
 nltk==3.7
 google-generativeai==0.3.0
 gunicorn==20.1.0
-transformers==4.30.0
-tokenizers==0.13.3 
+transformers==4.29.0  # Avoid requiring tokenizers
